fixed overflow and scrollbar issue

--- a/Service-Throttle-Frontend/service-throttle-admin-dashboard/src/components/sidebar/Sidebar.css
+++ b/Service-Throttle-Frontend/service-throttle-admin-dashboard/src/components/sidebar/Sidebar.css
@@ -7,19 +7,21 @@
   color: white;
   background-color: #03254c;
   position: relative;
+  overflow-y: auto;
 }
 
 .sidebarOpen {
   min-height: 100vh;
-  min-width: 30px;
+  min-width: 20px;
   padding-left: 10px;
   padding-right: 10px;
   flex: 0.2;
   color: white;
   background-color: #03254c;
   position: relative;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-
 .sidebar__logo {
   margin-right: auto;
   height: 70px;
