--- a/Service-Throttle-Frontend/service-throttle-admin-dashboard/src/index.css
+++ b/Service-Throttle-Frontend/service-throttle-admin-dashboard/src/index.css
@@ -1,5 +1,11 @@
 * {
   margin: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 body {
